tests/ui/fail/skip/use_skipped_getter_1.stderr
error[E0599]: no method named `unused_1` found for struct `Sparse` in the current scope
  --> tests/ui/fail/skip/use_skipped_getter_1.rs:14:23
   |
4  | / #[derive(Debug)]
5  | | pub struct Sparse {
   | |___- method `unused_1` not found for this struct
...
14 |       assert_eq!(sparse.unused_1(), 0); // ERROR!
   |                         ^^^^^^^^
   |
help: there is a method `set_unused_1` with a similar name, but with different arguments
  --> tests/ui/fail/skip/use_skipped_getter_1.rs:6:5
   |
6  |     #[skip(getters)]
   |     ^
